# triplinker

./: .gitignore  .travis.yml  README.md  celery.sh  pyproject.toml  setup.cfg
TripLinker/: manage.py
TripLinker/TripLinker/: asgi.py  settings.py
TripLinker/account/: managers.py  models.py
TripLinker/account/migrations/: 0001_initial.py
__new__/: LICENSE
triplinker/: new_log.txt  pytest.ini
triplinker/accounts/: admin.py  feed_app_link.py  forms.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
triplinker/accounts/forms/: forms.py  forms_feed.py
triplinker/accounts/migrations/: 0001_initial.py  0002_auto_20200716_1143.py  0002_auto_20200724_1337.py  0002_tlaccount_profile_image.py  0003_auto_20200720_1800.py  0003_auto_20200727_1532.py  0003_remove_tlaccount_profile_image.py  0004_auto_20200723_1142.py  0004_auto_20200728_1257.py  0004_tlaccount_profile_image.py  (+26 more)
triplinker/chat/: admin.py  celery_views.py  context_processors.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
triplinker/core/: celery.py  settings.py  urls.py  wsgi.py
triplinker/decorators/: logging.py
triplinker/feed/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
triplinker/friends_system/: apps.py  models.py  urls.py  views.py
triplinker/journeys/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
triplinker/logs/: log_2020-10-08.txt
triplinker/recommendations/: urls.py  views.py
triplinker/templates/: base.html
triplinker/trip_places/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
(+206 files in other folders)
