[tool.poetry]
name = "triplinker"
version = "0.1.0"
description = ""
authors = ["Pavel Sapezhko <me@weastur.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
psycopg2 = "^2.8.5"
django-environ = "^0.4.5"
django-debug-toolbar = "^2.2"
django-crispy-forms = "^1.9.2"
pytest-django = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
